[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Graphics/Materials/Materials-2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/material_1.gd" type="Script" id=2]

[node name="Material2" type="Node2D"]

[node name="material_2" type="RigidBody2D" parent="." groups=["material"]]
gravity_scale = 3.0
linear_damp = -0.5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="material_2"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="material_2"]
position = Vector2( -0.787325, 2.31817 )
scale = Vector2( 1.03867, 1.06061 )
polygon = PoolVector2Array( -8, -27, -73, -25, -75, -57, 59, -63, 64, 35, -3, 36 )

[node name="Area2D" type="Area2D" parent="material_2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="material_2/Area2D"]
position = Vector2( -0.787325, 2.31817 )
scale = Vector2( 1.03867, 1.06061 )
polygon = PoolVector2Array( -8, -27, -73, -25, -75, -57, 59, -63, 64, 35, -3, 36 )

[connection signal="body_entered" from="material_2/Area2D" to="material_2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="material_2/Area2D" to="material_2" method="_on_Area2D_body_exited"]
